--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ Repository = "https://github.com/ernestkoe/mcp-obsidian"
 requires = [ "hatchling",]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/mcp_obsidian"]
+
 [dependency-groups]
 dev = [
     "pyright>=1.1.389",
